syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "WebShopDemo.Grpc";

package product;

// The greeting service definition.
service Product {
  // Sends a greeting
  rpc GetAll (google.protobuf.Empty) returns (ProductList);
  rpc GetAllMouse (google.protobuf.Empty) returns (ProductList);
  rpc GetAllByName (ProductRequest) returns (ProductList);
}

message	ProductRequest {
	string name = 1;
}

message ProductList {
	repeated ProductItem items = 1;
}

message ProductItem {
	string id = 1;
	string name = 2;
	double price = 3;
	int32 quantity = 4;
}